# tasecureapi

.github/workflows/: cla.yml
bitbake/: README.md  secapi3_git.bb
reference/: CMakeLists.txt
reference/client/: CMakeLists.txt
reference/client/test/: sa_key_import_common.h
reference/clientimpl/: CMakeLists.txt
reference/cmake/: README.md  patch_mbedtls.cmake  patch_mbedtls_warnings.cmake
reference/cmake/patches_mbedtls/: ctr.h  mbedtls-ctr-counter-fix.patch
reference/src/client/: CMakeLists.txt
reference/src/client/include/: sa_ta_types.h  sa_types.h
reference/src/client/src/: sa_provider_asym_cipher.c  sa_provider_cipher.c  sa_provider_signature.c
reference/src/client/test/: sa_client_thread_test.cpp  sa_crypto_sign.cpp  sa_key_common.cpp  sa_key_exchange_common.cpp  sa_key_import_common.cpp  sa_key_import_common.h  sa_key_import_soc.cpp  sa_key_provision_netflix.cpp  sa_key_provision_playready.cpp  sa_key_provision_widevine.cpp
reference/src/clientimpl/: CMakeLists.txt
reference/src/clientimpl/src/: sa_crypto_cipher_process.c  sa_key_provision.c
reference/src/clientimpl/src/internal/: client.c
reference/src/taimpl/: CMakeLists.txt
reference/src/taimpl/include/: ta_sa_key.h  ta_sa_key_provision.h
reference/src/taimpl/include/porting/: otp_internal.h
reference/src/taimpl/src/: ta_sa_crypto_cipher_process_last.c  ta_sa_key_generate.c  ta_sa_key_import.c  ta_sa_key_provision.c
reference/src/taimpl/src/internal/: cenc.c  cmac_context.c  dh.c  digest.c  ec.c  hmac_context.c  json.c  key_store.c  rsa.c  soc_key_container.c  symmetric.c  ta.c  typej.c  unwrap.c
reference/src/taimpl/src/internal/providers/curve25519-donna/: CMakeLists.txt
reference/src/taimpl/src/internal/providers/decaf/: CMakeLists.txt
reference/src/taimpl/src/internal/providers/ed25519-donna/: CMakeLists.txt
reference/src/taimpl/src/internal/providers/mbedtls/: CMakeLists.txt
reference/src/taimpl/src/internal/yajl/: CMakeLists.txt
reference/src/taimpl/src/porting/: init.c  otp.c  rand.c
reference/src/taimpl/test/: ta_test_helpers.cpp
reference/src/util/gtest/: CMakeLists.txt
reference/src/util_mbedtls/src/: pkcs8.c
reference/taimpl/: CMakeLists.txt
reference/taimpl/src/internal/: buffer.c  cenc.c
reference/taimpl/src/porting/: svp.c
reference/util/: CMakeLists.txt
